feat: add comment to post endpoint
